refactor: Cleanup